--- a/PDFMerger/WebContent/WEB-INF/web.xml
+++ b/PDFMerger/WebContent/WEB-INF/web.xml
@@ -36,5 +36,26 @@
       <filter-name>forceUTF8CharSet</filter-name>
       <url-pattern>*</url-pattern>
     </filter-mapping>
+    
+    <security-constraint>
+  	<web-resource-collection>
+  		<web-resource-name>wrcol</web-resource-name>
+  		<url-pattern>/faces/cadastro.xhtml</url-pattern>
+  	</web-resource-collection>
+  	<auth-constraint>
+  		<role-name>*</role-name>
+  	</auth-constraint>
+  </security-constraint>
   
+  <login-config>
+  	<auth-method>FORM</auth-method>
+  	<form-login-config>
+  		<form-login-page>/faces/login.xhtml</form-login-page>
+  		<form-error-page>/faces/login.xhtml</form-error-page>
+  	</form-login-config>
+  </login-config>
+  
+  <security-role>
+  	<role-name>*</role-name>
+  </security-role>
 </web-app>
