Criação da página de gerenciamento de arquivos. Criada a página de gerenciamento de arquivos, desenvolvida função para realizar upload de arquivos, criação das classes para manipular os arquivos, criação da tabela arquivos no banco de dados, criação dos diretórios dos arquivos. Criação dos arquivos com a descrição das configurações necessárias para o funcionamento da aplicação.

--- a/PDFMerger/WebContent/WEB-INF/web.xml
+++ b/PDFMerger/WebContent/WEB-INF/web.xml
@@ -41,6 +41,7 @@
   	<web-resource-collection>
   		<web-resource-name>wrcol</web-resource-name>
   		<url-pattern>/faces/cadastro.xhtml</url-pattern>
+  		<url-pattern>/faces/arquivos.xhtml</url-pattern>
   	</web-resource-collection>
   	<auth-constraint>
   		<role-name>*</role-name>
