Criação da pagina de união de PDF.

--- a/PDFMerger/WebContent/WEB-INF/web.xml
+++ b/PDFMerger/WebContent/WEB-INF/web.xml
@@ -42,6 +42,7 @@
   		<web-resource-name>wrcol</web-resource-name>
   		<url-pattern>/faces/cadastro.xhtml</url-pattern>
   		<url-pattern>/faces/arquivos.xhtml</url-pattern>
+  		<url-pattern>/faces/uniao.xhtml</url-pattern>
   	</web-resource-collection>
   	<auth-constraint>
   		<role-name>*</role-name>
